Replaced XHR with fetch API, added file size and refresh button

--- a/static/downloadingWebsite/index.html
+++ b/static/downloadingWebsite/index.html
@@ -14,12 +14,13 @@
     <header class="primaryHeader"><h1 class = "primaryHeadings">File Manager</h1>
         <nav id="folderNavigation">
             <a href="/back"><img src="assets/icons/left.png" alt="Back" class="navButton"></a>
-            <a href="/refresh"><img src="assets/icons/reload.png" alt="Refresh" class="navButton"></a>
+            <button type="button"><img src="assets/icons/reload.png" alt="Refresh" class="navButton" id = "refresh"></button>
             <a href="/copy"><img src="assets/icons/quick-note.png" alt="Copy" class="navButton"></a>
             <a href="/paste"><img src="assets/icons/quick-note.png" alt="Paste" class="navButton"></a>
             <a href="/selction"><img src="assets/icons/multiselect.png" alt="Selection Mode" class="navButton"></a>
         </nav></header>
     <div id="primary">
+        <div id = "contentDiv"></div>
     </div>
 
 </body>
